# BattleSimulation

./: README.md  config.py  main.py  requirements.txt  runner.py  test.py
BSpineNew/: CMakeLists.txt  note.md
BSpineNew/data/: map.json  risk_map.txt
BSpineNew/include/: BSpline.h  algorithm.h  map_target.h  riskesdfMap.h
BSpineNew/note/: notes.md
BSpineNew/src/: BSpline.cc  algorithm.cc  map_target.cc  riskesdfMap.cc
BSpineNew/test/: test_algorithm.cc  test_avoidRisk.cc  test_esdf.cc  test_json.cc  test_map.cc  test_matplot.cc  test_risk.cc  test_spline.cc  test_target.cc
agent/: agent.py
common/: analyse.py  arguments.py  replay_buffer.py  rollout.py  utils.py
data/: AntiAircraftTurrent.xlsx  Commandpost.xlsx  Jammer.xlsx  MissileVehicle.xlsx  Radar.xlsx
environment/: arguments.py  battle_simulation.py  data_generation.py  enemy.py  log_config.py  utils.py
environment/test/: test_battleSimulation.py  test_enemy.py  test_generator.py  test_log.py  test_utils.py
model/coma+g2anet/x_50_y_50_custom/: 1_critic_params.pkl  1_rnn_params.pkl  2_critic_params.pkl  2_rnn_params.pkl  3_critic_params.pkl  3_rnn_params.pkl  4_critic_params.pkl  4_rnn_params.pkl  5_critic_params.pkl  5_rnn_params.pkl  6_critic_params.pkl  6_rnn_params.pkl
model/coma+g2anet/x_50_y_50_easy/: 10_critic_params.pkl  10_rnn_params.pkl  11_critic_params.pkl  11_rnn_params.pkl  12_critic_params.pkl  12_rnn_params.pkl  1_critic_params.pkl  1_rnn_params.pkl  2_critic_params.pkl  2_rnn_params.pkl  3_critic_params.pkl  3_rnn_params.pkl  4_critic_params.pkl  4_rnn_params.pkl  5_critic_params.pkl  5_rnn_params.pkl  6_critic_params.pkl  6_rnn_params.pkl  7_critic_params.pkl  7_rnn_params.pkl  8_critic_params.pkl  8_rnn_params.pkl  9_critic_params.pkl  9_rnn_params.pkl
model/coma+g2anet/x_50_y_50_hard/: 1_critic_params.pkl  1_rnn_params.pkl  2_critic_params.pkl  2_rnn_params.pkl  3_critic_params.pkl  3_rnn_params.pkl  4_critic_params.pkl  4_rnn_params.pkl  5_critic_params.pkl  5_rnn_params.pkl  6_critic_params.pkl  6_rnn_params.pkl  7_critic_params.pkl  7_rnn_params.pkl
model/coma+g2anet/x_50_y_50_medium/: 1_critic_params.pkl  1_rnn_params.pkl  2_critic_params.pkl  2_rnn_params.pkl  3_critic_params.pkl  3_rnn_params.pkl  4_critic_params.pkl  4_rnn_params.pkl  5_critic_params.pkl  5_rnn_params.pkl
network/: base_net.py  commnet.py  g2anet.py  maven_net.py  qmix.py
policy/: coma.py  iql.py  maven.py
result/coma+g2anet/x_50_y_50_custom/: episode_rewards_0.npy  win_rates_0.npy
result/coma+g2anet/x_50_y_50_easy/: episode_rewards_0.npy  win_rates_0.npy
result/coma+g2anet/x_50_y_50_hard/: episode_rewards_0.npy  win_rates_0.npy
result/coma+g2anet/x_50_y_50_medium/: episode_rewards_0.npy
(+10 files in other folders)
